# prostgres

./: .gitignore  10m-insert-benchmark.py  10m-select-benchmark.py  CMakeLists.txt  Index.h  README.md  benchmarks-final.md  check.sql  main.cpp  query-gen.py  query-gen2.py  test.cpp  test1.cpp  test2.cpp  tests-index.md
lib/: CreateQuery.cpp  CreateQuery.h  CreateQuery.hpp  DB.cpp  DB.h  DB.hpp  DBTypes.cpp  DBTypes.h  DBTypes.hpp  Index.cpp  Index.h  IndexFS.cpp  IndexFS.h  InsertQuery.cpp  InsertQuery.h  InsertQuery.hpp  ParserHelper.cpp  ParserHelper.h  ParserHelper.hpp  SelectQuery.cpp  SelectQuery.h  SelectQuery.hpp  Table.cpp  Table.h  Table.hpp  errors.cpp  errors.h  errors.hpp  serialize.cpp  serialize.h
